Write javadocs for #28.